--- a/package.json
+++ b/package.json
@@ -9,12 +9,12 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "framer-motion": "^10.16.0",
+    "lucide-react": "^0.294.0",
     "next": "14.0.0",
     "react": "^18",
     "react-dom": "^18",
-    "replicate": "^0.22.0",
-    "framer-motion": "^10.16.0",
-    "lucide-react": "^0.294.0"
+    "replicate": "^1.0.0"
   },
   "devDependencies": {
     "@types/node": "^20",
@@ -27,4 +27,4 @@
     "tailwindcss": "^3.3.0",
     "typescript": "^5"
   }
-} 
+}
